--- a/Capstone-Project/FrontEnd/src/Css/navbar.css
+++ b/Capstone-Project/FrontEnd/src/Css/navbar.css
@@ -1,17 +1,19 @@
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
 
 * {
   margin: 0;
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
-
 .navbar {
   padding: 10px;
   padding-left: 25px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #1c222a;
+  background-color: #0f0f0f;
+  position: fixed;
+  z-index: 2;
+  width: -webkit-fill-available;
 }
 
 .left-bar,
@@ -23,27 +25,44 @@
 }
 
 .youtubeLogo {
-  width: 130px;
+  width: 110px;
   cursor: pointer;
   padding-left: 30px;
 }
 
 .search {
-  background-color: #1c222a;
+  background-color: #0f0f0f;
+  border-radius: 25px;
+  min-width: 580px;
+  max-width: 800px;
+  border: 0.5px solid rgba(255, 255, 255, 0.351);
+}
+
+.search-icon {
+  cursor: pointer;
+  padding-right: 10px;
+  background-color: #3d3f4365;
+  border-radius: inherit;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
   padding: 6px;
-  border-radius: 5px;
-  width: 700px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 #searchType {
   cursor: pointer;
-  background-color: #1c222a;
+  background-color: #0f0f0f;
   color: white;
+  border-radius: 25px;
   border: none;
   outline: none;
-  width: 650px;
+  min-width: 520px;
+  max-width: 750px;
   font-size: 16px;
   padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 #searchType::-webkit-input-placeholder {
@@ -51,8 +70,8 @@
 }
 
 .right-bar {
-  width: 200px;
-  padding-right: 45px;
+  width: 230px;
+  padding-right: 25px;
   justify-content: space-between;
 }
 
@@ -60,19 +79,19 @@
   cursor: pointer;
   display: flex;
   align-items: center;
-  background-color: #1c222a;
+  background-color: #0f0f0f;
   border: 1px solid rgb(0, 162, 255);
   color: rgb(0, 162, 255);
   margin-left: 10px;
   padding: 8px;
   padding-left: 10px;
-  padding-right: 10px;
   font-size: 16px;
   border-radius: 25px;
   transition: all 0.15s ease;
 }
 .signin > p {
   padding-left: 7px;
+  padding-right: 3px;
 }
 
 .signin:hover {
@@ -87,6 +106,29 @@
 
 .icon-btns:hover {
   color: white !important;
-  background-color: #3d3f43;
+  background-color: #3d3f4365;
+}
+.auth-popup {
+  position: fixed;
+  z-index: 10;
+  color: white;
+  background-color: #2e2f31;
+  padding: 100px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 10px;
 
+  animation: fadeUp 0.5s ease-out forwards;
+  opacity: 0;
+}
+@keyframes fadeUp {
+  from {
+    transform: translate(-50%, -50%) translateY(50px);
+    opacity: 0;
+  }
+  to {
+    transform: translate(-50%, -50%);
+    opacity: 1;
+  }
 }
