--- a/Capstone-Project/FrontEnd/src/Css/navbar.css
+++ b/Capstone-Project/FrontEnd/src/Css/navbar.css
@@ -5,6 +5,11 @@
   margin: 0;
   font-family: "Roboto", sans-serif;
 }
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
 .navbar {
   padding: 10px;
   padding-left: 25px;
@@ -15,6 +20,8 @@
   position: fixed;
   z-index: 2;
   width: -webkit-fill-available;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
+    rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
 }
 
 .left-bar,
@@ -29,6 +36,7 @@
   width: 110px;
   cursor: pointer;
   padding-left: 30px;
+  object-fit: cover;
 }
 
 .search {
@@ -122,7 +130,7 @@
   transform: translate(-50%, -50%);
   border-radius: 10px;
   max-width: 500px;
-  animation: fadeUp 0.25s ease-out forwards;
+  animation: fadeUp 0.25s ease forwards;
   opacity: 0;
 }
 @keyframes fadeUp {
@@ -144,16 +152,14 @@
   width: 100%;
   height: 100%;
   z-index: 5; /* Set a lower z-index than the auth-popup */
-  animation: fade 0.25s ease-out forwards;
+  animation: Fade 0.25s ease-out forwards;
 }
 
-@keyframes fade {
+@keyframes Fade {
   from {
-    backdrop-filter: blur(0px);
   }
   to {
-    backdrop-filter: blur(8px);
-    background: rgba(0, 0, 0, 0.343);
+    background: rgba(0, 0, 0, 0.787);
   }
 }
 
@@ -171,7 +177,8 @@
   color: gray;
 }
 
-.signup-form, form {
+.signup-form,
+form {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -230,22 +237,46 @@ form > input::placeholder {
   transform: scale(0.95);
 }
 
-.already{
+.already {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-top: 25px;
 }
 
-.already>p:nth-child(1){
+.already > p:nth-child(1) {
   color: gray;
 }
 
-.already>p:nth-child(2){
+.already > p:nth-child(2) {
   cursor: pointer;
   margin-left: 5px;
 }
 
-.profile-pic{
-  width: 50px;
+.profile-pic {
+  cursor: pointer;
+  width: 42px;
+  height: 40px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.create-btn {
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  border: 1px solid rgba(128, 128, 128, 0.462);
+  padding-left: 10px;
+  padding-right: 10px;
+  transition: all 0.2s ease;
+}
+
+.create-btn:hover {
+  background-color: #242424;
+}
+
+.create-btn > p {
+  color: white;
+  padding-left: 10px;
+  font-size: 15px;
 }
