video player screen , all the comments and comment related actions

--- a/Capstone-Project/FrontEnd/src/Css/Browse.css
+++ b/Capstone-Project/FrontEnd/src/Css/Browse.css
@@ -381,6 +381,10 @@
   .popular-categories {
     top: 55px !important;
   }
+  .video-section {
+    margin-left: 6px !important;
+    margin-top: 40px !important;
+  }
 }
 
 @media (max-width: 580px) {
