--- a/Capstone-Project/FrontEnd/src/Css/studio.css
+++ b/Capstone-Project/FrontEnd/src/Css/studio.css
@@ -1,8 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Geologica:wght@600&display=swap");
 
 .studio {
-  background-color: #151515;
+  background-color: #1f1f1f;
   height: 100vh;
+}
+
+.studio-icon {
+  padding-left: 30px !important;
 }
 
 .create-channel {
@@ -71,9 +75,12 @@
 
 .channel-name {
   margin-top: 30px;
+  display: flex;
+  flex-direction: column;
 }
 
-.channelName {
+.channelName,
+.channelAbout {
   background-color: #3d3f4359;
   outline: none;
   height: 28px;
@@ -86,13 +93,79 @@
   border-radius: 5px;
 }
 
+.add-links {
+  cursor: pointer;
+  background-color: #3d3f4359;
+  color: white;
+  padding: 8px;
+  margin-top: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.27);
+  width: fit-content;
+  border-radius: 5px;
+  transition: all 0.1s ease;
+}
+
+.add-links:hover {
+  background-color: #60636759;
+}
+
+.add-links:active {
+  transform: scale(0.92);
+}
+
+.social-icons-links {
+  background-color: #60636759;
+  padding: 5px;
+  padding-left: 12px;
+  padding-right: 12px;
+  border-radius: 8px;
+  width: fit-content;
+  position: relative;
+  bottom: 47px;
+  left: 54px;
+  animation: fadeinanimation 0.2s ease;
+}
+
+@keyframes fadeinanimation {
+  0% {
+    opacity: 0;
+    left: 40px;
+  }
+  100% {
+    opacity: 1;
+    left: 54px;
+  }
+}
+
+.social_links,
+.social_links-light {
+  cursor: pointer;
+  transition: all 0.15s ease;
+}
+
+.social_links:hover {
+  color: rgba(255, 255, 255, 0.699) !important;
+}
+
 .channel-deatils {
   margin-top: 0px;
 }
 
 .save-data {
-  margin-top: 15px;
+  margin-top: 22px;
   cursor: pointer;
+  color: #282828;
+  background-color: #3ea6ff;
+  padding: 8px 20px;
+  border-radius: 3px;
+  font-size: 16px;
+  border: none;
+}
+
+.save-data-disable {
+  cursor: wait;
+  opacity: 45%;
+  margin-top: 22px;
   color: #282828;
   background-color: #3ea6ff;
   padding: 8px 20px;
@@ -122,7 +195,21 @@
   border-radius: 3px;
   font-size: 16px;
   border: none;
-  width: fit-content;
+  width: 120px;
+  height: 40px;
+}
+
+.save-video-data-disable {
+  cursor: wait;
+  color: #282828;
+  background-color: #3ea6ff;
+  opacity: 0.5;
+  padding: 8px 20px;
+  border-radius: 3px;
+  font-size: 16px;
+  border: none;
+  width: 120px;
+  height: 40px;
 }
 
 .upload-content {
@@ -203,6 +290,8 @@
 
 .thumbnail-section {
   padding-top: 0px !important;
+  position: relative;
+  bottom: 12px;
 }
 
 .details-section > p,
@@ -229,7 +318,7 @@
 
 .video-description {
   background-color: #282828;
-  height: 75px;
+  height: 70px;
   width: 380px;
   border: 2px solid rgba(128, 128, 128, 0.337);
   border-radius: 3px;
@@ -237,6 +326,8 @@
   margin-top: 20px;
   color: white;
   font-size: 17px;
+  resize: none;
+  padding-top: 30px;
 }
 
 .video-title:focus,
@@ -289,13 +380,13 @@
   font-size: 14px;
 }
 
-.left-icons>p {
+.left-icons > p {
   color: #9a9a9a;
   font-size: 14px;
 }
 
-.file-details {
-  margin-top: 15px;
+.video-visibility {
+  margin-top: 35px;
 }
 
 .file-details > p:nth-child(1) {
@@ -312,6 +403,7 @@
   background-color: #1f1f1f;
   padding: 10px;
   line-height: 22px;
+  width: 254px;
 }
 .link-details {
   display: flex;
@@ -369,7 +461,7 @@
   cursor: pointer;
   width: 176px;
   height: 100px;
-  margin-top: 18px;
+  margin-top: 12px;
   border-radius: 4px;
   object-fit: cover;
   transition: all 0.2s ease;
@@ -378,8 +470,8 @@
 
 .close2 {
   position: absolute;
-  left: 182px;
-  bottom: 160px;
+  left: 184px;
+  bottom: 112px;
   padding: 3px;
   z-index: 12;
 }
@@ -403,4 +495,336 @@
   100% {
     color: gray;
   } /* Transition back to gray color */
+}
+
+.edit-links {
+  position: relative;
+  bottom: 25px;
+}
+
+.fb-link,
+.insta-link,
+.twitter-link,
+.website-link {
+  display: flex;
+  position: relative;
+  align-items: center;
+  animation: fadedownanimation 0.2s ease;
+}
+
+@keyframes fadedownanimation {
+  0% {
+    opacity: 0;
+    bottom: 30px;
+  }
+
+  100% {
+    opacity: 1;
+    bottom: 0;
+  }
+}
+
+.fb-input-icon,
+.insta-input-icon,
+.twitter-input-icon,
+.website-input-icon {
+  background-color: #60636759;
+  padding: 6px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-top-left-radius: 5px;
+  border: 1px solid rgba(255, 255, 255, 0.27);
+  border-right: none;
+  border-bottom-left-radius: 5px;
+}
+
+.fb-input,
+.insta-input,
+.twitter-input,
+.website-input {
+  background-color: #3d3f4359;
+  outline: none;
+  height: 27px;
+  width: 100%;
+  padding: 10px;
+  color: white;
+  font-size: 16px;
+  border: 1px solid rgba(255, 255, 255, 0.27);
+  border-left: none;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.selected-visibility {
+  height: 50px;
+  background-color: rgba(255, 255, 255, 0);
+  color: white;
+  cursor: pointer;
+  outline: none;
+  height: 50px;
+  margin-top: 10px;
+  border: 2px solid rgba(128, 128, 128, 0.337);
+  border-radius: 5px;
+  font-size: 15px;
+  width: -webkit-fill-available;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.seperatee {
+  border: 1px solid #5b5d6265 !important;
+}
+
+.show-visibility {
+  position: relative;
+  background-color: rgba(255, 255, 255, 0);
+  color: white;
+  cursor: pointer;
+  outline: none;
+  margin-top: 10px;
+  border: 2px solid rgba(128, 128, 128, 0.337);
+  border-radius: 5px;
+  font-size: 15px;
+  width: -webkit-fill-available;
+  animation: pulldown 0.16s ease;
+}
+
+@keyframes pulldown {
+  0% {
+    bottom: 20px;
+    opacity: 0;
+  }
+  100% {
+    bottom: 0;
+    opacity: 1;
+  }
+}
+.public,
+.private {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+}
+
+.create-btn2 {
+  display: flex;
+  opacity: 0;
+  cursor: pointer;
+  align-items: center;
+  border: 1px solid black;
+  padding-left: 10px;
+  padding-right: 10px;
+  transition: all 0.2s ease;
+  position: absolute;
+  top: 489px;
+  left: 445px;
+  padding: 9px;
+  padding-left: 28px;
+  padding-right: 56px;
+  z-index: 2;
+}
+
+.close-channel,.close-channel-light {
+  cursor: pointer;
+  position: absolute;
+  right: 12px;
+  top: 12px;
+  padding: 5px;
+  border-radius: 100%;
+}
+
+.close-channel:hover {
+  color: white !important;
+  background-color: rgba(255, 255, 255, 0.163);
+}
+
+.loader4 {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  display: inline-block;
+  border-top: 3px solid #fff;
+  border-right: 3px solid transparent;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* MEDIA QUERIES */
+
+@media (width<= 860px) {
+  .upload-content {
+    width: 90vw !important;
+    max-width: none !important;
+    min-width: auto !important;
+  }
+  .uploading-video-data {
+    flex-direction: column;
+    overflow: scroll;
+    height: 80%;
+  }
+  .left-video-section {
+    width: -webkit-fill-available;
+  }
+  .details-form {
+    width: inherit;
+  }
+  .details-section {
+    width: inherit;
+  }
+  .video-title,
+  .video-description,
+  .video-tags {
+    width: inherit;
+  }
+  .right-video-section {
+    top: 0px;
+    padding-left: 40px;
+    padding-bottom: 40px;
+    padding-right: 40px;
+  }
+  .selected-visibility {
+    width: max-content;
+  }
+  .create-btn2 {
+    left: 259px;
+  }
+
+  /* CREATE CHANNEL  */
+
+  .channel-head {
+    font-size: 28px;
+  }
+
+  .channel-slogan {
+    font-size: 15px;
+    text-align: center;
+  }
+}
+
+@media (width<= 720px) {
+  .upload-img {
+    width: 135px;
+  }
+  .middle-data {
+    width: max-content;
+  }
+}
+
+@media (width<= 650px) {
+  .create-btn-short {
+    right: 18px;
+  }
+  .upload-content {
+    height: 78%;
+  }
+  .uploading-video-data {
+    height: 77%;
+  }
+  .details-section > p,
+  .thumbnail-section > p:nth-child(1) {
+    font-size: 18px;
+  }
+  .save-video-data-disable {
+    font-size: 14.5px;
+    width: 105px;
+  }
+  .create-btn2 {
+    left: 173px;
+    top: 497px;
+  }
+}
+
+@media (width<= 520px) {
+  .middle-data > p:nth-child(2) {
+    font-size: 15.4px;
+  }
+  .middle-data > p:nth-child(3) {
+    font-size: 13px;
+  }
+  .upload-btn-wrapper > button {
+    font-size: 15px;
+  }
+}
+
+@media (width<= 460px) {
+  .upload-content {
+    height: 100%;
+    width: 100% !important;
+    border-radius: 0%;
+  }
+
+  .uploading-video-data {
+    height: 82%;
+  }
+
+  .details-section,
+  .thumbnail-section,
+  .right-video-section {
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+
+  .upload-img {
+    width: 110px;
+  }
+  .upload-btn-wrapper > button {
+    font-size: 13.5px;
+  }
+  .middle-data > p:nth-child(2) {
+    font-size: 14.4px;
+  }
+  .middle-data > p:nth-child(3) {
+    font-size: 12px;
+  }
+  .left-ic {
+    font-size: 1.9rem !important;
+  }
+  .close2 {
+    left: 172px;
+  }
+  .create-btn2 {
+    left: 33%;
+    top: 535px;
+  }
+
+  /* CREATE CHANNEL  */
+
+  .create-channel {
+    width: 72vw !important;
+  }
+  .channel-head {
+    font-size: 24px;
+    text-align: center;
+  }
+  .channel-slogan {
+    font-size: 14px;
+  }
+  .selected-pic {
+    width: 90px;
+    height: 90px;
+  }
+  .channelName,
+  .channelAbout {
+    height: 18px;
+    font-size: 14.6px;
+    width: 78vw !important;
+  }
+  .fb-input,
+  .insta-input,
+  .twitter-input,
+  .website-input {
+    font-size: 15px;
+  }
 }
