--- a/Capstone-Project/FrontEnd/src/Css/loading.css
+++ b/Capstone-Project/FrontEnd/src/Css/loading.css
@@ -19,9 +19,9 @@
     to { transform: rotate(360deg); }
   }
   
-  p {
+  /* p {
     margin-top: 10px;
     font-size: 1.2rem;
     color: #555;
   }
-  
+   */
