--- a/Capstone-Project/FrontEnd/src/Css/Studio/videodetails.css
+++ b/Capstone-Project/FrontEnd/src/Css/Studio/videodetails.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap");
 
 .current-tophead {
-  font-size: 22px;
+  font-size: 18px;
   font-family: "Open Sans", sans-serif;
   color: white;
   font-weight: 700;
@@ -299,7 +299,7 @@
   right: 20px;
 }
 
-.thissection-btns > button:nth-child(3) {
+/* .thissection-btns > button:nth-child(3) {
   cursor: pointer;
   background-color: #3eaffe;
   color: #282828;
@@ -311,11 +311,11 @@
   padding-right: 15px;
   border-radius: 2px;
   transition: all 0.15s ease;
-}
+} */
 
-.thissection-btns > button:nth-child(3):active {
+/* .thissection-btns > button:nth-child(3):active {
   transform: scale(0.92);
-}
+} */
 
 .disabled-btn {
   cursor: not-allowed;
@@ -465,20 +465,20 @@
     bottom: 665px;
   }
 }
-
+/* 
 @media (width<= 860px) {
   .main-video-details-section {
     left: 120px !important;
   }
-}
+} */
 
 @media (width<= 600px) {
   .thissection-btns > button:nth-child(1) {
     font-size: 13px;
   }
-  .thissection-btns > button:nth-child(3) {
+  /* .thissection-btns > button:nth-child(3) {
     font-size: 14px;
-  }
+  } */
   .playable-videoedit {
     width: 300px !important;
     height: 169px !important;
@@ -517,9 +517,9 @@
   .currnt-tbimg2 {
     margin-left: 0px;
   }
-  .thissection-btns > button:nth-child(1) {
+  /* .thissection-btns > button:nth-child(1) {
     display: none;
-  }
+  } */
   .currentvideo-title-inp,
   .currentvideo-desc-inp,
   .preview-part2 > p:nth-child(2) {
@@ -564,8 +564,8 @@
   }
   .main-video-details-section {
     padding-right: 15px;
-    left: 16px !important;
-    top: 135px !important;
+    /* left: 16px !important; */
+    /* top: 135px !important; */
   }
 
   .back-menu-edit {
